Drop dependency on jaxb-api
DatatypeConverter is used only for its Base64 facilities, replace
that usage with plain Base64.Encoder.

Change-Id: Ic00895d9db69c4dfd4c34e8fed2a5b88eff9b4df
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>